Added logger service

--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -45,7 +45,7 @@
             action: "auth",
             auth: {
                 email: "admin@example.com",
-                password: "verysecret!",
+                password: "verysecret",
             }
         }
 
@@ -58,7 +58,7 @@
             headers: headers,
         }
 
-        fetch("http:\/\/front-end-service/handle", body)
+        fetch("http:\/\/localhost:8080/handle", body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML = JSON.stringify(payload, undefined, 4);
@@ -80,7 +80,7 @@
             method: 'POST',
         }
 
-        fetch("http:\/\/front-end-service", body)
+        fetch("http:\/\/localhost:8080", body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML ="empty post request";
